RESOLVED FIXED313949
[AppKit Gestures] REGRESSION(309295@main) Clicking on a selection results in the selection disappearing
https://bugs.webkit.org/show_bug.cgi?id=313949
Summary [AppKit Gestures] REGRESSION(309295@main) Clicking on a selection results in ...
Richard Robinson
Reported 2026-05-03 20:44:04 PDT
.
Attachments
Richard Robinson
Comment 1 2026-05-03 20:44:05 PDT
Richard Robinson
Comment 2 2026-05-03 20:45:46 PDT
EWS
Comment 3 2026-05-04 12:45:00 PDT
Committed 312545@main (04c9996631af): <https://commits.webkit.org/312545@main> Reviewed commits have been landed. Closing PR #64143 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.