[AppKit Gestures] REGRESSION(309295@main) Clicking on a selection results in the selection disappearing https://bugs.webkit.org/show_bug.cgi?id=313949 rdar://176117750

Reviewed by Abrar Rahman Protyasha.

Don't let the gestures that may simultaneously recognize with the text selection gestures ever begin if
the click location is within a selection.

Test: Tools/TestWebKitAPI/Tests/WebKit/WebPage/AppKitGesturesTests.swift

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController gestureRecognizerShouldBegin:]):
* Source/WebKit/UIProcess/mac/WebViewImpl.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::isTextSelectedAtPoint):
* Tools/TestWebKitAPI/Tests/WebKit/WebPage/AppKitGesturesTests.swift:

Canonical link: https://commits.webkit.org/312545@main