Source/WebKit/UIProcess/mac/WebViewImpl.h
@@ -879,6 +879,7 @@ public:
 
 #if HAVE(APPKIT_GESTURES_SUPPORT)
     void addTextSelectionManager();
+    bool isTextSelectedAtPoint(NSPoint);
 #endif
 
 private:
